--- a/Tarea1-html-css/index.html
+++ b/Tarea1-html-css/index.html
@@ -3,9 +3,9 @@
     <title>
         Mi pagina
     </title>
-    <!-- <link rel="stylesheet" href="estilo.css"> -->
+    <link rel="stylesheet" href="estilo.css">
     <!-- <link rel="stylesheet" href="estilo2.css"> -->
-    <link rel="stylesheet" href="estilo3.css">
+    <!-- <link rel="stylesheet" href="estilo3.css"> -->
 </head>
 
 <body>
