--- a/Tarea3-bootstrap/index.html
+++ b/Tarea3-bootstrap/index.html
@@ -52,7 +52,13 @@
               </ul>
             </li>
             <li class="nav-item">
-              <button type="button" class="btn btn-primary">Novedades</button>
+              <button type="button" class="btn btn-primary position-relative">
+                Novedades
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                  12+
+                  <span class="visually-hidden">unread messages</span>
+                </span>
+              </button>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -118,7 +124,7 @@
 
     <div class="card-group">
       <div class="card" style="width: 18rem;">
-        <img id="card1" src="" class="card-img-top" alt="...">
+        <img id="card0" src="" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Primer premio</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -126,7 +132,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img id="card2" src="" class="card-img-top" alt="...">
+        <img id="card1" src="" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Segundo premio</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -134,7 +140,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img id="card3" src="" class="card-img-top" alt="...">
+        <img id="card2" src="" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Tercer premio</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -142,7 +148,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img id="card4" src="" class="card-img-top" alt="...">
+        <img id="card3" src="" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Premio consuelo</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
