--- a/Tarea3-bootstrap/index.html
+++ b/Tarea3-bootstrap/index.html
@@ -126,32 +126,32 @@
       <div class="card" style="width: 18rem;">
         <img id="card0" src="" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Primer premio</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 id="title0" class="card-title"></h5>
+          <p id="desc0" class="card-text"></p>
           <a href="#" class="btn btn-primary">Ver premios</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img id="card1" src="" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Segundo premio</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 id="title1" class="card-title"></h5>
+          <p id="desc1" class="card-text"></p>
           <a href="#" class="btn btn-primary">Ver premios</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img id="card2" src="" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Tercer premio</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 id="title2" class="card-title"></h5>
+          <p id="desc2" class="card-text"></p>
           <a href="#" class="btn btn-primary">Ver premios</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img id="card3" src="" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Premio consuelo</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 id="title3" class="card-title"></h5>
+          <p id="desc3" class="card-text"></p>
           <a href="#" class="btn btn-primary">Ver premios</a>
         </div>
       </div>
